# agent-toolbox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
plugins/llmos/: pyproject.toml
plugins/llmos/.claude-plugin/: plugin.json
plugins/llmos/.codex-plugin/: plugin.json
plugins/llmos/hooks/: guard_bash.py  hooks.json  llmos_dirty_flag.py  llmos_hook.py  llmos_qmd_hook.py  llmos_stamp_hook.py
plugins/llmos/llmos_vault/: __init__.py  cli.py  daily.py  docs.py  frontmatter.py  graph.py  health.py  inbox.py  links.py  mutations.py  notes.py  obsidian_cli.py  provider.py  root.py  schema.py
plugins/llmos/scripts/: audit_metadata.py  daily_branch.py  doctor.sh  vault_root.py  write_daily_activity.py  write_daily_receipt.py
plugins/llmos/skills/maintain-llmos/: SKILL.md
plugins/llmos/skills/maintain-llmos/agents/: openai.yaml
plugins/llmos/skills/maintain-llmos/references/: automation.md  schema.md
plugins/llmos/skills/setup-llmos/: SKILL.md
plugins/llmos/skills/vault-cli/: SKILL.md
plugins/llmos/tests/: test_audit_metadata.py  test_daily_branch.py  test_daily_helpers.py  test_docstrings_and_docs.py  test_doctor.py  test_file_inbox.py  test_frontmatter.py  test_guard_obsidian_cli.py  test_guard_vault_mv.py  test_hook_gating.py  test_neighbors.py  test_obsidian_backend.py  test_plugin_manifest.py  test_project_daily_logs.py  test_provider.py  test_root.py  test_root_resolution.py  test_setup.py  test_stamp_format.py  test_stop_qmd_hook.py  test_vault_health.py  test_write_daily_activity.py
plugins/llmos/tests/fixtures/vault/: AGENTS.md
(+202 files in other folders)
